# dbt-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dbt_guard/: __init__.py  classifier.py  cli.py  differ.py  exceptions.py  impact.py  lineage.py  manifest.py  models.py  reporter.py  resolver.py
tests/: conftest.py
tests/fixtures/manifests/base/: manifest.json
tests/fixtures/manifests/current/: manifest.json
tests/fixtures/manifests/full/base/: manifest.json
tests/fixtures/manifests/full/current/: manifest.json
tests/fixtures/manifests/full/current/compiled/test_pkg/models/: model_b.sql
tests/fixtures/manifests/v2/current/compiled/test_pkg/models/: model_c.sql
tests/fixtures/sql/: cte_chain.sql  simple_select.sql  star_select.sql
tests/integration/: test_cli.py  test_cli_v2.py  test_e2e_realistic.py  test_pipeline.py
tests/unit/: test_differ.py  test_impact.py  test_impact_exposures.py  test_lineage.py  test_manifest.py  test_manifest_v2.py  test_reporter.py  test_reporter_v2.py  test_resolver.py
