[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-guard"
version = "0.2.0"
description = "Column-level lineage breaking change detection for dbt Core CI pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["dbt", "data", "lineage", "ci", "column-lineage", "breaking-change"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "sqlglot>=25.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
dbt-guard = "dbt_guard.cli:main"

[project.urls]
Homepage = "https://github.com/damione1/dbt-guard"
Issues = "https://github.com/damione1/dbt-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["dbt_guard"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dbt_guard --cov-report=term-missing -v"

[tool.coverage.run]
source = ["dbt_guard"]
omit = ["dbt_guard/py.typed"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
